fix: /usr/bin/ld linking

--- a/config/common/aero15xv8/scripts.yml
+++ b/config/common/aero15xv8/scripts.yml
@@ -1,5 +1,6 @@
 type: script
 scripts:
   # this sets up the proper policy & signing files for signed images to work
-  - signing.sh
+  - workarounds.sh
   - build-kmods.sh
+  - signing.sh
